# MailMind

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Procfile  README.md  devenv.nix  fly.toml  main.py  pyproject.toml  qa.txt  replier.py  requirements.txt  sample_secrets.txt  zoho_bootstrap.py  zoho_client.py  zoho_oauth.py
