[tool.poetry]
name = "gptzohoreplier"
version = "0.1.0"
description = ""
authors = ["Jabez Tho <jabeztho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.7"
langchain-openai = "^0.1.16"
langchain-community = "^0.2.7"
openai = "^1.35.13"
chromadb = "^0.5.4"
tiktoken = "^0.7.0"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
